--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="web_client_id">957667082676-5udntugmd983dcle07m7619g8voio485.apps.googleusercontent.com</string>
     <!--Urls-->
     <string name="firebase_project_id">capstone-414d8</string>
+    <string name="MAPS_API_KEY">AIzaSyBS28Gusipi0ykOaMz4qvznGCcRvtIIO4A</string>
 </resources>
