--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CapstoneProject9</string>
+    <string name="app_name">Jah-Jah NestBox</string>                  <!--<string name="app_name">CapstoneProject9</string>-->
 
     <!--IDs-->
     <string name="web_client_id">957667082676-5udntugmd983dcle07m7619g8voio485.apps.googleusercontent.com</string>
